--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-    <title>Салатный</title>
+    <title>Z-Homicide</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
-    <meta content="Салатный" property="og:title" />
-    <meta content="Сайт того самого придурка..." property="og:description" />
+    <meta content="Z-Homicide" property="og:title" />
+    <meta content="Сайт Z-Homicide" property="og:description" />
     <meta content="https://sadsalat.github.io/salatis/" property="og:url" />
     <meta content="https://sadsalat.github.io/salatis/photos/salatis.png" property="og:image" />
     <meta content="#fa0096" data-react-helmet="true" name="theme-color" />
@@ -16,13 +16,11 @@
 
 <body>
     <div class="center">
-        <h1>Салатный</h1>
-        <p>Дискорд сервер <a href="https://discord.gg/Z4wrZWtF9u" target="_blank">*Клик*</a><br>
-            Обо мне <a href="something/aboutme.html">*Клик*</a><br>
-            Мои проекты <a href="something/projects.html">*Клик*</a><br>
+        <h1>Z-Homicide</h1>
+        <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*Клик*</a><br>
             Галерея <a href="something/galeary.html">*Клик*</a><br>
             <img src="photos/salatis.png" alt="сралвсалат" style="width:150px;height:150px;">
-        <p>&nbsp;&copy; sadsalat 2023-2024</p>
+        <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
         <p><a href="index_eng.html"><img src="photos/usicon.png" style="width:60px;height:60px;"></a>&nbsp;&nbsp;&nbsp;
