--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Z-Homicide</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <meta content="Z-Homicide" property="og:title" />
     <meta content="Сайт Z-Homicide" property="og:description" />
     <meta content="https://sadsalat.github.io/salatis/" property="og:url" />
