--- a/index_eng.html
+++ b/index_eng.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
-    <meta content="Салатный" property="og:title" />
-    <meta content="Сайт того самого придурка..." property="og:description" />
+    <meta content="Z-Homicide" property="og:title">
     <meta content="https://sadsalat.github.io/salatis/" property="og:url" />
     <meta content="https://sadsalat.github.io/salatis/photos/salatis.png" property="og:image" />
     <meta content="#fa0096" data-react-helmet="true" name="theme-color" />
@@ -19,10 +18,9 @@
         <h1>Salatnyy</h1>
         <p>Discord Server <a href="https://discord.gg/Z4wrZWtF9u" target="_blank">*Click*</a><br>
 
-            About me <a href="something/aboutme_eng.html">*Click*</a><br>
-            My projects <a href="something/projects_eng.html">*Click*</a><br>
+          
             <img src="photos/salatis.png" alt="сралвсалат" style="width:150px;height:150px;">
-        <p>&nbsp;&copy; sadsalat 2023-2024</p>
+        <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
         <p><a href="index_eng.html"><img src="photos/usicon.png" style="width:60px;height:60px;"></a>&nbsp;&nbsp;&nbsp;
