--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         <h1>Z-Homicide</h1>
         <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*Клик*</a><br>
             Галерея <a href="something/galeary.html">*Клик*</a><br>
-            <img src="photos/salatis.png" alt="сралвсалат" style="width:150px;height:150px;">
+            <iframe width="330" height="200"
+    src="https://www.youtube.com/embed/li_9PBrcOcQ"
+    frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen>
+            </iframe>
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
