--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 <body>
     <div class="center">
         <h1>Z-Homicide</h1>
-        <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*Клик*</a><br>
-            Галерея <a href="something/galeary.html">*Клик*</a><br>
+        <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
             <iframe width="330" height="200"
-    src="https://www.youtube.com/embed/li_9PBrcOcQ"
+    src="https://youtu.be/5ZX7A_ie-PM?si=9kPW_48qNKkXBgzZ"
     frameborder="0"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
