--- a/index_eng.html
+++ b/index_eng.html
@@ -16,15 +16,13 @@
 <body>
     <div class="center">
         <h1>Z-homicide</h1>
-        <p>Discord Server <a href="https://discord.gg/Z4wrZWtF9u" target="_blank">*Click*</a><br>
-<iframe width="330" height="200"
-    src="https:https://youtu.be/5ZX7A_ie-PM?si=9kPW_48qNKkXBgzZ"
+        <p>Discord Server <a href="https://discord.gg/YKSwWgWh" target="_blank">*Click*</a><br>
+    <iframe width="330" height="200"
+    src="https://youtu.be/deaYy_hIFYE?si=kGae6VLtiyUaxwx0"
     frameborder="0"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
-</iframe>
-          
-            <img src="photos/salatis.png" alt="сралвсалат" style="width:150px;height:150px;">
+    </iframe>
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
