--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Z-Homicide</h1>
         <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
             <iframe width="330" height="200"
-    src="https://youtu.be/5ZX7A_ie-PM?si=9kPW_48qNKkXBgzZ"
+    src="https://youtu.be/deaYy_hIFYE?si=kGae6VLtiyUaxwx0"
     frameborder="0"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
