--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="center">
         <h1>Z-Homicide</h1>
         <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
+            <p>посмотри видео снизу
             <iframe width="330" height="200"
     src="https://youtu.be/deaYy_hIFYE?si=kGae6VLtiyUaxwx0"
     frameborder="0"
