--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <meta content="Z-Homicide" property="og:title" />
     <meta content="Сайт Z-Homicide" property="og:description" />
-    <meta content="https://sadsalat.github.io/salatis/" property="og:url" />
-    <meta content="https://sadsalat.github.io/salatis/photos/salatis.png" property="og:image" />
     <meta content="#fa0096" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type="image/x-icon" href="photos/salatis.png">
+    <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 </head>
 
