--- a/index_eng.html
+++ b/index_eng.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <meta content="Z-Homicide" property="og:title">
-    <meta content="#fa0096" data-react-helmet="true" name="theme-color" />
+    <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
     <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 </head>
