--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>Z-Homicide</h1>
         <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
             <iframe width="330" height="200"
-    src="https://youtu.be/deaYy_hIFYE?si=XB2_O6wgAYhTbePI"
-    frameborder="0"
+    src="https://youtu.be/1aHgVwAQadw?si=woxaRfTKZHFLQUL5"
+    frameborder="1"
     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen>
             </iframe>
