--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     <div class="center">
         <h1>Z-Homicide</h1>
         <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
-            <iframe width="330" height="200"
-    src="https://youtu.be/1aHgVwAQadw?si=woxaRfTKZHFLQUL5"
-    frameborder="1"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
+            <iframe 
+  src="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" 
+  width="560" 
+  height="315" 
+  frameborder="0" 
+  allowfullscreen>
             </iframe>
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
