--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
     <div class="center">
         <h1>Z-Homicide</h1>
         <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
-            <iframe 
-  src="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" 
-  width="560" 
-  height="315" 
-  frameborder="0" 
-  allowfullscreen>
-            </iframe>
+<p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
