--- a/index_eng.html
+++ b/index_eng.html
@@ -3,8 +3,8 @@
 <head>
     <title>Z-Homicide</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <meta content="Z-Homicide" property="og:title">
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
     <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
