--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="center">
         <h1>Z-Homicide</h1>
-        <p>discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
+        <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
 <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
