--- a/index_eng.html
+++ b/index_eng.html
@@ -15,12 +15,7 @@
     <div class="center">
         <h1>Z-homicide</h1>
         <p>Discord Server <a href="https://discord.gg/YKSwWgWh" target="_blank">*Click*</a><br>
-    <iframe width="330" height="200"
-    src="https://youtu.be/deaYy_hIFYE?si=kGae6VLtiyUaxwx0"
-    frameborder="0"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen>
-    </iframe>
+    <p>guide <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
