--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
-        <p><a href="index_eng.html"><img src="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" style="width:60px;height:60px;"></a>&nbsp;&nbsp;&nbsp;
-            <a href="index.html"><img src="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" style="width:60px;height:60px;"></a>
+        <p><a href="index_eng.html"><img src="usicon.png" style="width:60px;height:60px;"></a>&nbsp;&nbsp;&nbsp;
+            <a href="index.html"><img src="ruicon.png" style="width:60px;height:60px;"></a>
         </p>
     </div>
     <script src="anims.js"></script>
