--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Z-Homicide</h1>
         <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
 <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
-    <img src="https://images-ext-1.discordapp.net/external/aQPRbgjaPy1iUAVBaUTjK00kzWrfGxyMT2PP5TSurUM/https/media.tenor.com/CwMdjGweaeoAAAPo/popka.mp4"/>
+    <h1>Прятной Игры!</h1>
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
