--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 <meta content="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" property=" og:image" />
-
+<bgsound src="music_gamestartup13.mp3" loop="1" volume="-1000" balance="0" />
 <body>
     <div class="center">
         <h1>Z-Homicide</h1>
