--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 <meta content="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" property=" og:image" />
-</head>
-<body>
-<embed src="music_gamestartup13.mp3" autostart="true" hidden="false" loop="false" width="300" height="65" align="bottom"> </embed>
-</body>
+<audio controls autoplay loop>
+    <source src="music_gamestartup13.mp3" type="audio/ogg">
+</audio>
     <div class="center">
         <h1>Z-Homicide</h1>
         <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
