--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
     
   <audio controls autoplay loop>
+autostart="true
+hidden="false
     <source src="music_gamestartup13.mp3" type="audio/ogg">
   </audio>
     
