--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    };
   </script>
     <audio id="audio" loop autoplay>
-   <source src="music_gamestartup13.mp3" 
+   <source src="music_gamestartup13.mp3" volume="-1000"
    type="audio/mp3" />
 </audio>
 <script>
