--- a/index_eng.html
+++ b/index_eng.html
@@ -19,8 +19,11 @@
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
     </div>
     <div class="language">
-        <p><a href="index_eng.html"><img src="usicon.png" style="width:60px;height:60px;"></a>&nbsp;&nbsp;&nbsp;
-            <a href="index.html"><img src="ruicon.png" style="width:60px;height:60px;"></a></p>
+        <p>
+            <a href="index_eng.html"><img src="usicon.png" style="width:60px;height:60px;"></a>
+            <a href="index_kz.html"><img src="kzicon.png" style="width:60px;height:60px;"></a>
+            <a href="index.html"><img src="ruicon.png" style="width:60px;height:60px;"></a>
+        </p>
     </div>
 </body>
 
