--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <a href="index_eng.html"><img src="usicon.png" style="width:60px;height:60px;"></a>
             <a href="index_kz.html"><img src="kzicon.png" style="width:60px;height:60px;"></a>
             <a href="index.html"><img src="ruicon.png" style="width:60px;height:60px;"></a>
+            <a href="index_by.html"><img src="byicon.png" style="width:60px;height:60px;"></a>
         </p>
     </div>
     <script src="anims.js"></script>
