--- a/index_eng.html
+++ b/index_eng.html
@@ -10,7 +10,18 @@
     <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 </head>
-
+  <script>
+   window.onload = function () {
+     var context = new AudioContext();
+   };
+  </script>
+    <audio id="audio" loop autoplay>
+   <source src="Postal_2_-_Map_Muzak_75678587.mp3" volume="-1000"
+   type="audio/mp3" />
+</audio>
+<script>
+   let audio = (document.getElementById('audio').autoplay = true);
+</script>
 <body>
     <div class="center">
         <h1>Z-homicide</h1>
