--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="center">
         <h1>Z-Homicide</h1>
         <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
-        <p>информация <a href="file:///C:/Users/HP%20EliteBook%20840%20G5/Desktop/Z-homicide-site-main/index_info.html" target="_blank">*тап*</a><br>
+        <p>информация <a href="https://telepuzik1.github.io/Z-homicide-site/" target="_blank">*тап*</a><br>
         <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
      
   <script>
