--- a/index_info.html
+++ b/index_info.html
@@ -13,7 +13,7 @@
 <meta content="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" property=" og:image" />
     <div class="center">
         <h1>Информация</h1>
-        <p>Z-Homicide делают всего человека это Я и PTSR instructor <p>
+        <p>Z-Homicide делают всего два человека это ТЕЛЕПУЗИК и PTSR instructor <p>
             <p>Режим делается с начала 2025 года<p>  
                 <p>Сам же режим представляет другой режим homicide от человека под ником"jackarunda"<p>
                     <p>Бюджет режима равен:0₽<p>
