--- a/index_by.html
+++ b/index_by.html
@@ -24,7 +24,7 @@
 </script>
 <body>
     <div class="center">
-        <h1>Z аддзел па расследаванні забойстваў</h1>
+        <h1>З-Забойства</h1>
         <p>Сервер discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*Пстрычка*</a><br>
     <p>Кіраўніцтва <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Пстрычка*</a><br>
         <p>&nbsp;&copy; ТЭЛЕПУЗІК 2025</p>
