--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <html>
 
 <head>
-    <title>Z-Homicide</title>
+    <title>Убийство</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-    <meta content="Z-Homicide" property="og:title" />
-    <meta content="Сайт Z-Homicide" property="og:description" />
-    <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
+    <meta content="Убийство" property="og:title" />
+    <meta content="Сайт Убийство" property="og:description" />
+    <meta content="#1100ffff" data-react-helmet="true" name="theme-color" />
+    <link rel="icon" type="image/x-icon" href="homicide.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
-<meta content="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" property=" og:image" />
     <div class="center">
-        <h1>Z-Homicide</h1>
+        <h1>Убийство</h1>
         <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
         <p>информация <a href="index_info.html" target="_blank">*тап*</a><br>
         <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
@@ -23,7 +22,7 @@
    };
   </script>
     <audio id="audio" loop autoplay>
-   <source src="Postal_2_-_Map_Muzak_75678587.mp3" volume="-1000"
+   <source src="music_gamestartup13.mp3" volume="-1000"
    type="audio/mp3" />
 </audio>
 <script>
