--- a/index_by.html
+++ b/index_by.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-    <title>Z-Homicide</title>
+    <title>Забойства</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-    <meta content="Z-Homicide" property="og:title">
+    <meta content="Забойства" property="og:title">
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
+    <link rel="icon" type="image/x-icon" href="homicide.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 </head>
   <script>
@@ -16,7 +16,7 @@
    };
   </script>
     <audio id="audio" loop autoplay>
-   <source src="Postal_2_-_Map_Muzak_75678587.mp3" volume="-1000"
+   <source src="music_gamestartup13.mp3" volume="-1000"
    type="audio/mp3" />
 </audio>
 <script>
@@ -24,7 +24,7 @@
 </script>
 <body>
     <div class="center">
-        <h1>З-Забойства</h1>
+        <h1>Забойства</h1>
         <p>Сервер discord <a href="https://discord.gg/YKSwWgWh" target="_blank">*Пстрычка*</a><br>
     <p>Кіраўніцтва <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Пстрычка*</a><br>
         <p>&nbsp;&copy; ТЭЛЕПУЗІК 2025</p>
