--- a/index_eng.html
+++ b/index_eng.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
-    <title>Z-Homicide</title>
+    <title>Homicide</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-    <meta content="Z-Homicide" property="og:title">
+    <meta content="Homicide" property="og:title">
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
+    <link rel="icon" type="image/x-icon" href="homicide.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 </head>
   <script>
@@ -16,7 +16,7 @@
    };
   </script>
     <audio id="audio" loop autoplay>
-   <source src="Postal_2_-_Map_Muzak_75678587.mp3" volume="-1000"
+   <source src="music_gamestartup13.mp3" volume="-1000"
    type="audio/mp3" />
 </audio>
 <script>
@@ -24,10 +24,10 @@
 </script>
 <body>
     <div class="center">
-        <h1>Z-homicide</h1>
+        <h1>homicide</h1>
         <p>Discord Server <a href="https://discord.gg/YKSwWgWh" target="_blank">*Click*</a><br>
     <p>guide <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Click*</a><br>
-        <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
+        <p>&nbsp;&copy; TELETUBBY 2025</p>
     </div>
     <div class="language">
         <p>
@@ -38,5 +38,4 @@
         </p>
     </div>
 </body>
-
 </html>
