--- a/index_info.html
+++ b/index_info.html
@@ -1,23 +1,22 @@
 <html>
 
 <head>
-    <title>Z-Homicide</title>
+    <title>Homicide</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-    <meta content="Z-Homicide" property="og:title" />
-    <meta content="Сайт Z-Homicide" property="og:description" />
+    <meta content="Homicide" property="og:title" />
+    <meta content="Сайт Homicide" property="og:description" />
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
     <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
 <meta content="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" property=" og:image" />
     <div class="center">
         <h1>Информация</h1>
-        <p>Z-Homicide делают всего два человека это ТЕЛЕПУЗИК и PTSR instructor <p>
-            <p>Режим делается с начала 2025 года<p>  
-                <p>Сам же режим представляет другой режим homicide от человека под ником"jackarunda"<p>
+        <p>Homicide делают всего три человека это ТЕЛЕПУЗИК и PTSR instructor, Figach. <p>
+            <p>Режим делается уже я сам и не помню<p>  
+                <p>Сам же режим представляет режим homicide от человека под ником"jackarunda"<p>
                     <p>Бюджет режима равен:0₽<p>
-                    <p>База режима это чедара бокс с гитхаба но без иммерсивной камеры вот ссылка кому надо <p> <a href="https://github.com/chechensky/chedara-box-immersive" target="_blank">ссылка</a><br>
     
   <script>
    window.onload = function () {
@@ -25,7 +24,7 @@
    };
   </script>
     <audio id="audio" loop autoplay>
-   <source src="Postal_2_-_Map_Muzak_75678587.mp3" volume="-1000"
+   <source src="music_gamestartup13.mp3" volume="-1000"
    type="audio/mp3" />
 </audio>
 <script>
