--- a/index_info.html
+++ b/index_info.html
@@ -10,7 +10,7 @@
     <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
     <link rel="icon" type="image/x-icon" href="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg">
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
-<meta content="fire-letter-z-fiery-font-bright-flamy-font-symbol_173948-5867.jpg" property=" og:image" />
+<meta content="homicide.jpg" property=" og:image" />
     <div class="center">
         <h1>Информация</h1>
         <p>Homicide делают всего три человека это ТЕЛЕПУЗИК и PTSR instructor, Figach. <p>
