--- a/index_eng.html
+++ b/index_eng.html
@@ -25,7 +25,7 @@
 <body>
     <div class="center">
         <h1>homicide</h1>
-        <p>Discord Server <a href="https://discord.gg/YKSwWgWh" target="_blank">*Click*</a><br>
+        <p>Discord Server <a href="https://discord.gg/EW9UZEs2c9" target="_blank">*Click*</a><br>
     <p>guide <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Click*</a><br>
         <p>&nbsp;&copy; TELETUBBY 2025</p>
     </div>
