--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
     <div class="center">
         <h1>Убийство</h1>
-        <p>дискорд сервер <a href="https://discord.gg/EW9UZEs2c9" target="_blank">*тап*</a><br>
+        <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
         <p>информация <a href="index_info.html" target="_blank">*тап*</a><br>
         <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
      
@@ -22,12 +22,11 @@
    };
   </script>
     <audio id="audio" loop autoplay>
-   <source src="music_gamestartup13.mp3" type="audio/mp3" />
+   <source src="gta4.mp3" volume="-10"
+   type="audio/mp3" />
 </audio>
 <script>
-   let audio = document.getElementById('audio');
-   audio.volume = 0.3;
-   audio.autoplay = true;
+   let audio = (document.getElementById('audio').autoplay = true);
 </script>
     
         <p>&nbsp;&copy; ТЕЛЕПУЗИК 2025</p>
