--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="google-site-verification" content="_yipDHbxk-a_7lxW2r_dTnyFEwpNm6rSLWMAOOcrPms" />
     <div class="center">
         <h1>Убийство</h1>
-        <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a><br>
-        <p>информация <a href="index_info.html" target="_blank">*тап*</a><br>
-        <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a><br>
+        <p>дискорд сервер <a href="https://discord.gg/YKSwWgWh" target="_blank">*тап*</a>
+        <p>информация <a href="index_info.html" target="_blank">*тап*</a>
+        <p>гайд <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*тап*</a>
      
   <script>
    window.onload = function () {
