--- a/index.kz.html
+++ b/index.kz.html
@@ -25,8 +25,8 @@
 <body>
     <div class="center">
         <h1>Кісі өлтіру</h1>
-        <p>Discord сервері <a href="https://discord.gg/EW9UZEs2c9" target="_blank">*Жылау*</a><br>
-    <p>Нұсқаулық <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Жылау*</a><br>
+        <p>Discord сервері <a href="https://discord.gg/EW9UZEs2c9" target="_blank">*Жылау*</a>
+    <p>Нұсқаулық <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Жылау*</a>
         <p>&nbsp;&copy; ТЕЛЕТУББИ 2025</p>
     </div>
     <div class="language">
