--- a/index_by.html
+++ b/index_by.html
@@ -25,8 +25,8 @@
 <body>
     <div class="center">
         <h1>Забойства</h1>
-        <p>Сервер discord <a href="https://discord.gg/EW9UZEs2c9" target="_blank">*Пстрычка*</a><br>
-    <p>Кіраўніцтва <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Пстрычка*</a><br>
+        <p>Сервер discord <a href="https://discord.gg/EW9UZEs2c9" target="_blank">*Пстрычка*</a>
+    <p>Кіраўніцтва <a href="https://youtu.be/deaYy_hIFYE?si=ASwW37SnNCg9SEW2" target="_blank">*Пстрычка*</a>
         <p>&nbsp;&copy; ТЭЛЕПУЗІК 2025</p>
     </div>
     <div class="language">
